<resources>
    <string name="app_name">MyStock</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="or">or</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string-array name="tab_title">
        <item>product</item>
        <item>stock</item>
    </string-array>
</resources>
