<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/login_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="120dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="22dp"
            android:paddingEnd="22dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/logo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_edittext_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/username"
                android:padding="14dp"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/login_edittext_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:background="@drawable/button_login_background"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/login_text_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center">

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/login_text_detail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/or"
                    android:textColor="@color/login_text_detail" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/login_text_detail" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_circle_background"
                    android:padding="12dp"
                    android:src="@drawable/ic_facebook" />

                <View
                    android:layout_width="32dp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_circle_background"
                    android:padding="12dp"
                    android:src="@drawable/ic_google" />

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>